objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Business Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demo - Hold</fullName>
        </values>
        <values>
            <fullName>In Discussion</fullName>
        </values>
        <values>
            <fullName>TBD</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lighthouse</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>In Discussion</fullName>
        </values>
        <values>
            <fullName>Negotiate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Local</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>In Discussion</fullName>
        </values>
        <values>
            <fullName>New Opportunity</fullName>
        </values>
        <values>
            <fullName>Submit for Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Educate</fullName>
        </values>
        <values>
            <fullName>Long Term Nurture</fullName>
        </values>
        <values>
            <fullName>Negotiate</fullName>
        </values>
        <values>
            <fullName>New Opportunity</fullName>
        </values>
        <values>
            <fullName>Qualify</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Discussion</fullName>
        </values>
        <values>
            <fullName>New Opportunity</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>TORCHx</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Demo</fullName>
        </values>
        <values>
            <fullName>In Discussion</fullName>
        </values>
        <values>
            <fullName>Negotiate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>YBN - Individual Location</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>M001 - Set Local Demo</fullName>
        </values>
        <values>
            <fullName>M002 - Complete local demo %28IL%29</fullName>
        </values>
        <values>
            <fullName>M003 - Contract %28IL%29</fullName>
        </values>
        <values>
            <fullName>Resting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>YBN</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Client Discovery</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract</fullName>
        </values>
        <values>
            <fullName>Demo%2FValue Prop</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Solution</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AD__c</fullName>
        <formula>Account.Account_Director__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVERAGE_CUSTOMER_LENGTH__c</fullName>
        <inlineHelpText>How long does the average end customer repeatedly purchase services or buy products for</inlineHelpText>
        <label>Average Customer Length</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVERAGE_SUCCESS_RATE_OF_A_FRANCHISE__c</fullName>
        <inlineHelpText>How many new locations or dealers does corporate on average add a year</inlineHelpText>
        <label>Avg # of Locations Added a Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Active_Lead_Gen_Rep__c</fullName>
        <formula>if(
 Lead_Gen_Rep__r.IsActive,
"yes",
"no")</formula>
        <label>Active Lead Gen Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <formula>IF( ISNULL(Days_Since_last_Activity__c), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmy", "NO ACTIVITIES"), IF( AND (Days_Since_last_Activity__c &gt;=0, Days_Since_last_Activity__c&lt;15), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmo","Less than 15") , IF(AND(Days_Since_last_Activity__c&gt; 15,Days_Since_last_Activity__c&lt; 30),IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmj","15 to 30"), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hme","More than 30"))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Creative_Service_Fee__c</fullName>
        <label>Website Final Client Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Integration_Service_Fee__c</fullName>
        <label>Integration Final Client Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Project_Mgmt_Fee__c</fullName>
        <label>Total Prof Services Final Client Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Added_to_confluence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added to confluence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Expansion_Plans__c</fullName>
        <inlineHelpText>Beyond adding additional locations, does the company have other expansion plans? (i.e. mergers, etc.)</inlineHelpText>
        <label>Additional Expansion Plans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Feedback_For_SDR__c</fullName>
        <label>Additional Feedback For SDR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adoption_Facebook_Target__c</fullName>
        <description>Used by YBN.</description>
        <label>Forecasted % Adoption - Facebook Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adoption_Foundations_Target__c</fullName>
        <label>Forecasted % Adoption-Foundations Target</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adoption_PPC_Target__c</fullName>
        <label>Forecasted % Adoption - PPC Target</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Adoption_Reviews_Target__c</fullName>
        <label>Forecasted % Adoption- Reviews Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Advanced_SEO_Contract_Length__c</fullName>
        <label>Enhanced SEO Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advanced_SEO_Fee_Per_Location__c</fullName>
        <label>Enhanced SEO Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advanced_SEO_Setup_Fee_Per_Location__c</fullName>
        <label>Enhanced SEO Setup Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advanced_SEO_Setup_of_Locations__c</fullName>
        <label>Enhanced SEO Setup # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advanced_SEO_of_Locations__c</fullName>
        <label>Enhanced SEO # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advertising_Dislikes__c</fullName>
        <label>Advertising Dislikes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Likes__c</fullName>
        <label>Advertising Likes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate_ID__c</fullName>
        <label>Affiliate ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_URL__c</fullName>
        <label>Affiliate URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Age_Days__c</fullName>
        <description>Captures the age in days of an opportunity.</description>
        <formula>IF(IsClosed=True,  CloseDate - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_of_Record__c</fullName>
        <label>Agency of Record</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_organic_fees__c</fullName>
        <formula>Organic_fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All organic fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value_Sum__c</fullName>
        <label>Annual Contract Value (Sum)</label>
        <summarizedField>OpportunityLineItem.AnnualProductValue__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <formula>One_time_Fees__c
+

IF(PPC_Contract_Length__c &gt;= 12, (Corporate_Monthly_PPC_Budget__c + Monthly_Advertising_Charges__c) * 12, (Corporate_Monthly_PPC_Budget__c + Monthly_Advertising_Charges__c) * PPC_Contract_Length__c)
+

IF(Corporate_Site_Contract_Length__c &gt;= 12, Corporate_Site_Maintenance_Fee__c * 12,
Corporate_Site_Maintenance_Fee__c * Corporate_Site_Contract_Length__c)
+

IF(Display_Contract_Length__c &gt;= 12, Corporate_Display_Fees__c * 12, Corporate_Display_Fees__c * Display_Contract_Length__c)
+

CASE(RecordTypeId,
"012600000009YRT" /* Individual Location */, 

IF(Yodle_Web_Contract_Length__c &gt;= 12, Corporate_Monthly_Mgmt_Fees__c * 12, Corporate_Monthly_Mgmt_Fees__c * Yodle_Web_Contract_Length__c)
+  

IF(Centermark_Contract_Length__c &gt;= 12, (Centermark_Fee__c + CM_Lite_Fee_Per_Location__c) * 12, (Centermark_Fee__c + CM_Lite_Fee_Per_Location__c ) * Centermark_Contract_Length__c)
+

IF(Location_Enhanced_SEO_Contract_Length__c &gt;= 12, Location_Enhanced_SEO_Fee_Per_Location__c * 12, Location_Enhanced_SEO_Fee_Per_Location__c *  Location_Enhanced_SEO_Contract_Length__c ) 
+

IF( Facebook_Contract_Length__c  &gt;= 12,  Facebook_Fee_Per_Location__c * 12,  Facebook_Fee_Per_Location__c *  Facebook_Contract_Length__c )
+

IF(Organic_Contract_Length__c &gt;= 12, Organic_fees__c * 12, Organic_fees__c * Organic_Contract_Length__c)
+

IF(PPC_Contract_Length__c &gt;= 12, corp_Media_Management_Fee__c * 12,
PPC_Contract_Length__c * corp_Media_Management_Fee__c)


, /* Final CASE parameter */

IF(Yodle_Web_Contract_Length__c &gt;= 12, Corporate_Monthly_Mgmt_Fees__c * 12 * Yodle_Web_Setup_of_Locations__c, Corporate_Monthly_Mgmt_Fees__c * Yodle_Web_Setup_of_Locations__c * Yodle_Web_Contract_Length__c)
+  

IF(Centermark_Contract_Length__c &gt;= 12, ((Centermark_Fee__c * Centermark_of_Locations__c) + (CM_Lite_Fee_Per_Location__c * CM_Lite_of_Locations__c))*12, ((Centermark_Fee__c * Centermark_of_Locations__c) + (CM_Lite_Fee_Per_Location__c * CM_Lite_of_Locations__c))*Centermark_Contract_Length__c)
+

IF(Email_Contract_Length__c &gt;= 12, Email_Fee_Per_Location__c * 12 * Email_of_Locations__c,
Email_Fee_Per_Location__c * Email_of_Locations__c * Email_Contract_Length__c)
+

IF(Review_Management_Contract_Length__c &gt;= 12, Review_Management_Fee_Per_Location__c * 12 * Review_Management_of_Locations__c, Review_Management_Fee_Per_Location__c * Review_Management_of_Locations__c
* Review_Management_Contract_Length__c)
+

IF(Corporate_Enhanced_SEO_Contract_Length__c &gt;= 12, Corporate_Enhanced_SEO_Monthly_Fee__c * 12 * Corporate_Enhanced_SEO_of_Locations__c, Corporate_Enhanced_SEO_Contract_Length__c* Corporate_Enhanced_SEO_of_Locations__c * Corporate_Enhanced_SEO_Monthly_Fee__c)
+

IF(PPC_Contract_Length__c &gt;= 12, corp_Media_Management_Fee__c * 12 * Media_Management_Fee_of_Locations__c,
PPC_Contract_Length__c * Media_Management_Fee_of_Locations__c * corp_Media_Management_Fee__c)
)
+

IF( Location_Enhanced_SEO_Contract_Length__c &gt;=12,  Location_Enhanced_SEO_Fee_Per_Location__c * 12 * Location_Enhanced_SEO_of_Locations__c,
 Location_Enhanced_SEO_Contract_Length__c  *  Location_Enhanced_SEO_Fee_Per_Location__c *  Location_Enhanced_SEO_of_Locations__c)
+

IF(  Facebook_Contract_Length__c  &gt;=12,  Facebook_Fee_Per_Location__c * 12 *  Facebook_of_Locations__c,
 Facebook_Contract_Length__c *  Facebook_Fee_Per_Location__c *  Facebook_of_Locations__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Contract_Value__c</fullName>
        <description>WBN IL used in commission reports</description>
        <formula>IF(Contract_Term_in_months__c  &gt;= 12, 
Amount/Contract_Term_in_months__c  * 12,
Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Percent_Penetration__c</fullName>
        <label>Anticipated Percent Penetration</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apex_Updated__c</fullName>
        <label>Apex Updated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renewal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Location_Ad_Spend__c</fullName>
        <inlineHelpText>On average, how much does each location spend on advertising on a monthly basis?</inlineHelpText>
        <label>Average Location Ad Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Monthly_Charge__c</fullName>
        <description>Formula field used in the Drawloop WBN IL contract.  Total PPC Seasonal Charge + Total Monthly Charges / Number of Products. added ().</description>
        <formula>if (
(Total_PPC_Seasonal_Charge__c + Total_Monthly_Charges__c &gt; 0),
(Total_PPC_Seasonal_Charge__c + Total_Monthly_Charges__c) / Number_of_Products__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average PPC Seasonal and Recurring charge.  Only used in the contract when at least one PPC Seasonal is chosen as the Product Charge Type.</inlineHelpText>
        <label>Average Monthly Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Revenue_Per_Location__c</fullName>
        <label>Average Revenue Per Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Average_Size_of_Transaction__c</fullName>
        <label>Average Size of Transaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_of_Locations_that_Close_a_Year__c</fullName>
        <inlineHelpText>How many individual locations or dealers does corporate lose a year</inlineHelpText>
        <label>Avg # of Locations that Close a Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Identity_Changes__c</fullName>
        <inlineHelpText>Are there any upcoming identity or branding changes?</inlineHelpText>
        <label>Upcoming Brand/Identity Changes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Estimate_Summary__c</fullName>
        <inlineHelpText>High level summary of low, medium and high budget estimates. Detailed budget estimates should be attached.</inlineHelpText>
        <label>Budget Estimate Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bulk_Google_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does the customer have a bulk account for Google listings?</inlineHelpText>
        <label>Bulk Google Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Lite_Fee_Per_Location__c</fullName>
        <label>CM Lite Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Lite_of_Locations__c</fullName>
        <label>CM Lite # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Login_Credentials__c</fullName>
        <inlineHelpText>CRM login credentials required to complete integration</inlineHelpText>
        <label>CRM Login Credentials</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_System_Name__c</fullName>
        <inlineHelpText>Name of the CRM system customer is using</inlineHelpText>
        <label>CRM System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRV_One_Time_Sum__c</fullName>
        <description>Roll-up Summary of the Oppty Product Commission One Time with the Product Charge Type of One Time.</description>
        <inlineHelpText>Commissionable Revenue Value for One Time products.</inlineHelpText>
        <label>CRV One Time Sum</label>
        <summarizedField>OpportunityLineItem.CRV_One_Time__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRV_PPC_Seasonal_Average__c</fullName>
        <description>If Seasonal PPC exists, then determine the Average cost per month..</description>
        <formula>IF( CloseDate &lt;  DATE(2018,04,01),
/*2017 Commissions*/ 
IF(
Number_of_Products_PPC_Seasonal__c&gt;=12, 
((Total_PPC_Seasonal_Charge__c /  Number_of_Products_PPC_Seasonal__c)*1.2), 

 IF(Number_of_Products_PPC_Seasonal__c&lt;12 &amp;&amp; Number_of_Products_PPC_Seasonal__c&gt;=6, ((Total_PPC_Seasonal_Charge__c /  Number_of_Products_PPC_Seasonal__c)*1), 


 IF(Number_of_Products_PPC_Seasonal__c&lt;6 &amp;&amp; Number_of_Products_PPC_Seasonal__c&gt;0, ((Total_PPC_Seasonal_Charge__c /  Number_of_Products_PPC_Seasonal__c)*0.8), 

0))),
/*2018 Commissions*/

IF(
Number_of_Products_PPC_Seasonal__c&gt;=12, 
((Total_PPC_Seasonal_Charge__c /  Number_of_Products_PPC_Seasonal__c)*1), 
 IF(Number_of_Products_PPC_Seasonal__c&gt;0, ((Total_PPC_Seasonal_Charge__c /  Number_of_Products_PPC_Seasonal__c)*0.75), 
0))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commissionable Revenue Value for Average of PPC Seasonal Charges.</inlineHelpText>
        <label>CRV PPC Seasonal Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRV_Recurring_Sum__c</fullName>
        <description>Roll-up Summary of the Oppty Product Commission Recurring with the Product Charge Type of Recurring.</description>
        <inlineHelpText>Commissionable Revenue Value for Recurring products.</inlineHelpText>
        <label>CRV Recurring Sum</label>
        <summarizedField>OpportunityLineItem.CRV_Recurring__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CR_Multiplier__c</fullName>
        <description>.</description>
        <formula>IF(OR( National_Contract_Length_months__c = 1, National_Contract_Length_months__c = 2, National_Contract_Length_months__c = 3, National_Contract_Length_months__c = 4, National_Contract_Length_months__c = 5), 0.8, (IF(OR(National_Contract_Length_months__c = 6,National_Contract_Length_months__c = 7, National_Contract_Length_months__c = 8, National_Contract_Length_months__c = 9, National_Contract_Length_months__c = 10, National_Contract_Length_months__c = 11),1, IF(National_Contract_Length_months__c &gt;=12, 1.2, 0) )))</formula>
        <label>CR Multiplier</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Training_Date__c</fullName>
        <label>CS Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Can_locations_make__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can locations make online decisions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centermark_Contract_Length__c</fullName>
        <label>Centermark Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centermark_Fee__c</fullName>
        <inlineHelpText>per month per location</inlineHelpText>
        <label>Centermark Fee Per Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Centermark_Original_Est_Launch_Date__c</fullName>
        <label>Centermark Original Est Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Centermark_Product__c</fullName>
        <formula>If(includes( Products__c ,"Centermark Lite"),"Centermark Lite",
If(includes( Products__c,"Centermark"), "Centermark",""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Centermark Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centermark_of_Locations__c</fullName>
        <label>Centermark # of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Discovery_Date__c</fullName>
        <description>Stores the date in which the stage was set to Client Discovery</description>
        <label>Client Discovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Email_For_Touchplan__c</fullName>
        <formula>Account.Email_for_Touchplan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Email For Touchplan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <formula>Account.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Full_Name__c</fullName>
        <formula>Account.Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account.Client_ID__c</formula>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone_Number__c</fullName>
        <inlineHelpText>Client Phone Number pulled from Account unless filled in by rep</inlineHelpText>
        <label>Client Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <formula>Account.Client_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_TimeZone__c</fullName>
        <formula>Account.tz__Timezone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client TimeZone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Plan_Last_Updated_Date__c</fullName>
        <label>Close Plan - Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Plan__c</fullName>
        <label>Close Plan</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Close_Time__c</fullName>
        <formula>CloseDate - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_NCSE_Split__c</fullName>
        <description>Used in WFR: WBN IL Commission NCSE Split..</description>
        <label>Commission NCSE Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_NCSE__c</fullName>
        <description>(Commission One Time Sum + Commission Recurring Sum + Average Seasonal PPC) * 26.7%.</description>
        <formula>IF( CloseDate &lt; DATE(2018,04,01), 
/*2017 Commissions*/ 
((CRV_One_Time_Sum__c+CRV_Recurring_Sum__c+CRV_PPC_Seasonal_Average__c) * 0.267),
/*2018 Commissions*/ 
((CRV_One_Time_Sum__c+CRV_Recurring_Sum__c+CRV_PPC_Seasonal_Average__c) * 0.32)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total commission to be paid</inlineHelpText>
        <label>Commission NCSE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_QA_d__c</fullName>
        <defaultValue>false</defaultValue>
        <description>..</description>
        <label>Commission QA'd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue_Amount__c</fullName>
        <description>.</description>
        <label>Commissionable Revenue Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissionable_Revenue__c</fullName>
        <description>.</description>
        <formula>( Setup_Fee_CR__c +  Facebook_Setup_Fee__c + ((Monthly_Management_Fees__c * Yodle_Web_Multiplier__c) + ((Monthly_Advertising_Charges__c + corp_Media_Management_Fee__c) * PPC_Multiplier__c) + (Organic_fees__c * Organic_Multiplier__c) + (Review_Management_Fee_Per_Location__c * Review_Management_Multiplier__c) + (Monthly_Display_Fees__c * Display_Multiplier__c )+  (Facebook_Fee_Per_Location__c*Facebook_Multiplier__c) +   Leads_by_Web_G1__c )) *  SDR_Multiplier__c*Tradeshow_Multiplier__c*Promo_Multiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commissionable Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissions_Paid__c</fullName>
        <description>..</description>
        <label>Commissions Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Financial_Backing__c</fullName>
        <inlineHelpText>i.e. Private Equity?</inlineHelpText>
        <label>Company Financial Backing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <label>Compelling Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Advantage__c</fullName>
        <label>Competitive Advantage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By_Manager__c</fullName>
        <label>Completed By Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By_Role__c</fullName>
        <label>Completed By Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <label>Completed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Presentation_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if related presentation task or event has been completed.  Updated via process builder.</description>
        <label>Completed Presentation Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultative_Data_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultative Data Dept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>1300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is the final decision maker  that will be signing the contract for this specific opportunity?</inlineHelpText>
        <label>Key Financial Decis Maker - Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Key Signing Decision Maker)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Auto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is checked when Process Builder - WBN IL Contract Creation runs.</description>
        <label>Contract Auto Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Countersigned_Date__c</fullName>
        <label>Contract Countersigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Stage_Date__c</fullName>
        <description>Stores the date in which the stage was set to Contract</description>
        <label>Contract Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_in_months__c</fullName>
        <description>Contract terms in months.</description>
        <label>Contract Term (in months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contractual_Obligation_of_Client_Sal__c</fullName>
        <label>Contractual Obligation - # of Client Sal</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>